# actr-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: signaling_websocket_flow.md
echo-demo/: .gitignore  Actr.lock.toml  Actr.toml  Cargo.toml
fixtures/kotlin/: Actr.toml  build.gradle.kts  gitignore  gradle.properties  settings.gradle.kts
fixtures/kotlin/app/: build.gradle.kts
fixtures/kotlin/data-stream/: Actr.toml  DataStreamIntegrationTest.kt  MainActivity.kt  MyUnifiedHandler.kt  activity_main.xml
fixtures/kotlin/echo/: Actr.toml  EchoIntegrationTest.kt
fixtures/protos/: echo_service.hbs  local.data-stream.hbs
fixtures/python/: ActrService.py.hbs  README.md
fixtures/python/echo/: Actr.client.toml.jinja2  Actr.server.toml.jinja2  client.py.jinja2  gitignore.jinja2  server.py.jinja2
fixtures/rust/: Actr.toml.hbs  Cargo.toml.hbs  README.md.hbs  build.rs.hbs  gitignore.hbs  lib.rs.hbs
fixtures/rust/echo/: Actr.toml.hbs  README.md.hbs
fixtures/swift/: Actr.lock.toml.hbs  Actr.toml  Actr.toml.hbs  ActrService+DataStream.swift.hbs  ActrService+Echo.swift.hbs  ActrService.swift  ActrService.swift.hbs  ActrService.swift.init.hbs  App.swift  App.swift.hbs  ContentView.swift  ContentView.swift.hbs  Info.plist  actr-config.toml  gitignore  gitignore.hbs  project.yml  project.yml.hbs
fixtures/swift/data-stream/: Actr.toml.hbs  ActrService.swift.hbs  ContentView.swift.hbs
fixtures/swift/echo/: Actr.toml.hbs  ActrService.swift.hbs  ContentView.swift.hbs  README.md.hbs  README.zh-CN.md.hbs
fixtures/templates/doc/: _head.hbs  _nav.hbs  api.hbs  config.hbs  index.hbs
scripts/: build-release.sh  update-brew-formula.py
scripts/brew/: actr.rb
src/: assets.rs  error.rs  lib.rs  main.rs  plugin_config.rs  utils.rs
src/commands/: check.rs  config.rs  discovery.rs  doc.rs  fingerprint.rs  generate.rs  init.rs  install.rs  mod.rs  run.rs
src/commands/codegen/: kotlin.rs  mod.rs  python.rs  swift.rs  traits.rs  typescript.rs
src/commands/initialize/: kotlin.rs  mod.rs  python.rs  rust.rs  swift.rs  (+1 more)
src/core/: components.rs  container.rs  error.rs  mod.rs  pipelines.rs
src/templates/: mod.rs
tests/: integration_test.rs
(+29 files in other folders)
