[package]
name = "actr-cli"
version = "0.1.6"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Command line tool for Actor-RTC framework projects"
keywords = ["actor", "cli", "codegen", "protobuf", "framework"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "actr"
path = "src/main.rs"

[patch.crates-io]
actr-protocol = { path = "../actr/crates/protocol" }
actr-config = { path = "../actr/crates/config" }
actr-version = { path = "../actr/crates/version" }
actr-framework-protoc-codegen = { path = "../actr/crates/framework-protoc-codegen" }

[dependencies]
# Actor-RTC crates - only what CLI actually needs
actr-config = "0.1.7"
actr-protocol = "0.1.6"
actr-version = "0.1.4"
actr-framework-protoc-codegen = "0.1.6"

# Command line interface
clap = { version = "4.5.53", features = ["derive", "cargo"] }
dialoguer = "0.12.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# File system operations
fs_extra = "1.3"
tempfile = "3.22"
dirs = "5.0"

# Process management
tokio = { version = "1.48.0", features = ["full"] }

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# HTTP client for proto dependencies
reqwest = { version = "0.12.24", features = ["stream"] }

# Git support
git2 = "0.20"

# Cargo integration
cargo_metadata = "0.18"

# Template engine
handlebars = "5.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.33"
toml = "0.9.8"
toml_edit = "0.22"

# Date/time handling for lock files
chrono = { version = "0.4", features = ["serde"] }

# Hashing for integrity verification
md5 = "0.7"
sha2 = "0.10"

# Protocol buffer generation
prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"

# Code generation utilities (for protoc-gen-actrframework)
quote = "1.0"
proc-macro2 = "1.0"
bytes = "1.0"
heck = "0.5.0"                                   # for case conversion
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.22"
